feat: configuracao completa dos pagamentos
