# app/Http/Controllers/PaymentController.php
@@ -2,7 +2,9 @@
 
 namespace App\Http\Controllers;
 
+use App\Enums\PaymentStatus;
 use App\Http\Requests\PaymentSaveRequest;
+use App\Http\Requests\PaymentStatusRequest;
 use App\Models\Customer;
 use App\Models\CustomerTag;
 use App\Models\IdenficationPayer;
@@ -42,6 +44,42 @@ class PaymentController extends Controller
     {
         $payments = Payment::with('payer.identification')->get();
         return $this->success($payments);
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/payments/{id}",
+     *      tags={"Payments"},
+     *      security={{"bearer_token":{}}},
+     *      summary="Mostra um pagamento",
+     *      description="Retorna dados do pagamento",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="UUID do pagamento",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Sucesso na pesquisar",
+     *          @OA\JsonContent(ref="#/components/schemas/PaymentResource")
+     *       ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Pagamento não encontrado",
+     *      ),
+     * )
+     */
+    public function show(Request $request)
+    {
+        $payment = Payment::with('payer.identification')->find($request->payment);
+        if (!$payment) {
+            return $this->notFound(false, 'Pagamento não encontrado');
+        }
+        return $this->success($payment, 'Sucesso ao buscar o pagamento');
     }
 
     /**
@@ -93,5 +131,88 @@ class PaymentController extends Controller
         } catch (Exception $err) {
             return $this->serverError(null,  env('APP_DEBUG') ? $err->getMessage() : 'Falha ao criar pagamento');
         }
+    }
+
+    /**
+     * @OA\Patch(
+     *      path="/payments/{id}",
+     *      tags={"Payments"},
+     *      security={{"bearer_token":{}}},
+     *      summary="Atualização do status de um pagamento",
+     *      description="Atualiza o status de um pagamento",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="UUID do pagamento",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/PaymentStatusRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="No Content",
+     *       ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Bankslip not found with the specified id",
+     *      ),
+     * )
+     */
+    public function updateStatus(PaymentStatusRequest $request)
+    {
+        $payment = Payment::find($request->payment);
+        if (!$payment) {
+            return $this->notFound(false, 'Bankslip not found with the specified id');
+        }
+        $payment->update([
+            'status' => $request->status
+        ]);
+
+        return $this->noContent();
+    }
+
+    /**
+     * @OA\Delete(
+     *      path="/payments/{id}",
+     *      tags={"Payments"},
+     *      security={{"bearer_token":{}}},
+     *      summary="Cancela um pagamento",
+     *      description="Muda para CANCELED o status do pagamento",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="UUID do pagamento",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="No Content",
+     *       ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Payment not found with the specified id",
+     *      ),
+     * )
+     */
+    public function destroy(Request $request)
+    {
+        $payment = Payment::find($request->payment);
+        if (!$payment) {
+            return $this->notFound(false, 'Payment not found with the specified id');
+        }
+
+        $payment->update([
+            'status' => PaymentStatus::CANCELED
+        ]);
+
+        return $this->noContent();
     }
 }
